# rs-sysctl-typed-cpu

./: Cargo.toml  README.md  check.sh
examples/cli/sysctl-cpu/: Cargo.toml  example.sh  sysctl-cpu
examples/cli/sysctl-cpu/src/: main.rs
src/: lib.rs
tests/: cpu_info_test.rs
